force-app/main/Government_Documents/Purchasing_and_Invoicing/objects/Payable_Invoice__c/Payable_Invoice__c.object-meta.xml
<CustomObject>
    <compactLayoutAssignment
  >Payable_Invoice_Compact_Layout</compactLayoutAssignment>
    <label>Payable Invoice</label>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Payable Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payable Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>