force-app/main/Government_Documents/Purchasing_and_Invoicing/objects/Payable_Invoice__c/fields/Federal_Contract__c.field-meta.xml
<CustomField>
    <fullName>Federal_Contract__c</fullName>
    <label>Federal Contract</label>
    <referenceTo>Federal_Contract__c</referenceTo>
    <relationshipLabel>Payable Invoices</relationshipLabel>
    <relationshipName>Payable_Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>