force-app/main/Government_Documents/Purchasing_and_Invoicing/objects/Payable_Invoice__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <label>Invoice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>