force-app/main/Government_Documents/Purchasing_and_Invoicing/objects/Payable_Invoice__c/fields/Invoice_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Total_Amount__c</fullName>
    <label>Invoice Total Amount</label>
    <summarizedField
  >Payable_Invoice_Line_Item__c.Amount_to_be_Paid__c</summarizedField>
    <summaryForeignKey
  >Payable_Invoice_Line_Item__c.Payable_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>