force-app/main/Government_Documents/Purchasing_and_Invoicing/objects/Payable_Invoice__c/listViews/My_Invoices.listView-meta.xml
<ListView>
    <fullName>My_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Contract_Name__c</columns>
    <columns>Contract_Number__c</columns>
    <columns>Contract_Period__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Invoice_Total_Amount__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Created_By_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Invoices</label>
</ListView>